Moved everything to winforms and made the shell

--- a/OGAniEditor/OGAniEditor/OGAniEditor.csproj
+++ b/OGAniEditor/OGAniEditor/OGAniEditor.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{745C0FCB-531C-43B0-AF3E-CB42DBB1F772}</ProjectGuid>
+    <ProjectGuid>{73DDBA81-C8F3-49AD-94A2-3A288DD727E7}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,11 +10,12 @@
     <RootNamespace>OGAniEditor</RootNamespace>
     <AssemblyName>OGAniEditor</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>HiDef</XnaProfile>
-    <XnaCrossPlatformGroupID>4bd106e9-878d-4df6-a37c-043bee91fb1b</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>eb16cb49-448d-43ae-b250-3bec644f14d5</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -93,6 +94,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -116,10 +118,6 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\OGAni\OGAni.csproj">
-      <Project>{16D22524-8042-40B9-8E17-F17C6C78B156}</Project>
-      <Name>OGAni</Name>
-    </ProjectReference>
     <ProjectReference Include="..\OGAniEditorContent\OGAniEditorContent.contentproj">
       <Name>OGAniEditorContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
@@ -151,6 +149,9 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
