--- a/OGAniEditor/OGAniEditor/OGAniEditor.csproj
+++ b/OGAniEditor/OGAniEditor/OGAniEditor.csproj
@@ -109,6 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawhelpers\Drawhelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game1.cs" />
